added blog post, worked on styles and logo

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -15,7 +15,7 @@
   font-family: $heading-font-family;
   img {
     vertical-align: text-top;
-    width: $h1 * 1.5
+    width: $h1 * $bird-logo-multiplier;
   }
 }
 
@@ -52,4 +52,33 @@
 
 .site-header .site-nav {
   text-align: center;
+}
+
+@media screen and (min-width: $viewport-small) {
+  .site-header {
+    text-align: left;
+  }
+
+  .site-nav {
+    margin-top: 0;
+  }
+
+  .site-header a {
+    font-size: $h4;
+  }
+
+  .site-header .site-title {
+    float: left;
+    font-size: $h2;
+    font-family: $heading-font-family;
+    img {
+      vertical-align: text-top;
+      width: $h2 * $bird-logo-multiplier;
+    }
+  }
+
+  .site-header .site-nav {
+    float: right;
+    margin-top: .25rem;
+  }
 }
