--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -23,6 +23,9 @@ $h0-responsive-max: 5.76rem !default;
 $h1-responsive-max: 3.84rem !default;
 $abbr-border-bottom: 1px black dotted;
 
+$hero-font-size: 72px;
+$bird-logo-multiplier: 1.4;
+
 // Page width
 $measure-width: 42rem !default;
 
