--- a/_sass/basscss/_base-typography.scss
+++ b/_sass/basscss/_base-typography.scss
@@ -61,8 +61,11 @@ blockquote {
 
 blockquote,
 blockquote p {
-  font-size: $h3;
   font-style: italic;
+}
+
+blockquote p:last-of-type {
+  margin-bottom: 0;
 }
 
 h1,
