remove nav and add white paper to front page

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,2 +1,2 @@
-<a href="{{ site.baseurl }}/protocols/">Protocols</a>
+<a href="{{ site.baseurl }}/blog/althea-paper/">White Paper</a>
 <a href="{{ site.baseurl }}/blog/">Blog</a>
