--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,2 +1,3 @@
 <a href="{{ site.baseurl }}/blog/althea-paper/">White Paper</a>
 <a href="{{ site.baseurl }}/blog/">Blog</a>
+<a href="http://forum.{{ site.baseurl }}">Forum</a>
