--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -1,7 +1,6 @@
 $pad: 20px;
 
 .grid {
-  background: white;
   margin: 0 0 $pad 0;
   * {
     box-sizing: border-box;
@@ -17,9 +16,14 @@ $pad: 20px;
 [class*='col-'] {
   float: left;
   padding-right: $pad;
+  padding-bottom: .25em;
   .grid &:last-of-type {
     padding-right: 0;
   }
+}
+
+.col-3-3 {
+  width: 100%;
 }
 .col-2-3 {
   width: 66.66%;
@@ -35,6 +39,12 @@ $pad: 20px;
 }
 .col-1-8 {
   width: 12.5%;
+}
+
+@media screen and (max-width: $viewport-small) {
+  [class*='col-'] {
+    width: 100%;
+  }
 }
 
 /* Opt-in outside padding */
