refine new frontpage and adjust colors

--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -50,7 +50,7 @@ textarea {
 }
 
 .field-light {
-  background-color: white;
+  background-color: $off-white;
   transition: box-shadow .2s ease;
   border-style: solid;
   border-width: $border-width;
