--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -54,6 +54,8 @@ $darken-1: rgba(#000,.0625) !default;
 $darken-2: rgba(#000,.125) !default;
 $darken-3: rgba(#000,.25) !default;
 $darken-4: rgba(#000,.5) !default;
+$off-white: #FFFFFF;
+$off-black: #14160A;
 
 // Links
 $link-color: $dark-gray;
