--- a/_sass/basscss/_colors.scss
+++ b/_sass/basscss/_colors.scss
@@ -5,7 +5,7 @@
 }
 
 .white {
-  color: white;
+  color: $off-white;
 }
 
 .blue {
@@ -45,7 +45,7 @@
 }
 
 .bg-white {
-  background-color: white;
+  background-color: $off-white;
 }
 
 .bg-blue {
