--- a/_sass/_backgrounds.scss
+++ b/_sass/_backgrounds.scss
@@ -1,7 +1,7 @@
 .black-bg {
-    background: black;
+    background: $off-black;
     padding: 1em 1em;
     p {
-        color: white;
+        color: $off-white;
     }
 }
