--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -20,7 +20,7 @@
 
 footer {
   background-color: $footer-bg-color;
-  border-top: $footer-border-top;
+  // border-top: $footer-border-top;
   color: $footer-color;
   font-size: $footer-font-size;
   font-weight: $footer-font-weight;
