--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,3 @@
 <a href="{{ site.baseurl }}/blog/althea-paper">White Paper</a>
 <a href="{{ site.baseurl }}/blog/">Blog</a>
-<a href="http://forum.altheamesh.com/">Forum</a>
+<a href="https://www.reddit.com/r/altheamesh/">Reddit</a>
