new design, whitepaper

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,5 @@
 <footer class="center">
   <div class="measure">
-    <small>
-      Contact: jehan.tremback@gmail.com
-    </small>
+      Contact: hello@altheamesh.com
   </div>
 </footer>
