--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,4 @@
-<a href="{{ site.baseurl }}/blog/althea-paper">White Paper</a>
+<a href="https://github.com/althea-mesh">Code</a>
+<a style="color: black" href="{{ site.baseurl }}/documents/whitepaper.pdf">Whitepaper</a>
 <a href="{{ site.baseurl }}/blog/">Blog</a>
-<a href="https://www.reddit.com/r/altheamesh/">Reddit</a>
+<a href="https://riot.im/app/#/room/#althea:matrix.org">Chat</a>
