--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -13,6 +13,7 @@
 .site-header .site-title {
   font-size: $h1;
   font-family: $heading-font-family;
+  font-weight: 500;
   img {
     vertical-align: text-top;
     width: $h1 * $bird-logo-multiplier;
