--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -1,23 +1,26 @@
 .hero {
-  display: none; // stupid mobile-first
-  text-align: center;
-  padding-bottom: 40px;
-  .title {
-    font-size: $hero-font-size;
-    font-family: $heading-font-family;
-    display: inline-block;
-    img {
-      vertical-align: text-top;
-      height: $hero-font-size * $bird-logo-multiplier;
-    }
-  }
+  background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url("/images/transmitters-sky.png");
+  background-size: cover;
+  color: white;
+  text-shadow: none;
 }
+
 
 @media screen and (min-width: $viewport-medium) {
   html {
     font-size: 18px;
   }
-  .hero {
-    display: block;
+}
+
+.bottom-hero {
+  background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url("/images/aiming.jpg");
+  background-size: cover;
+  color: white;
+  text-shadow: none;
+  p {
+    color: white;
+  }
+  img {
+    opacity: 0.4;
   }
 }
