--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -1,3 +1,11 @@
 .text-center {
   text-align: center
 }
+
+.bullet-image {
+  max-width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  float: none;
+  display: block;
+}
