--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,10 +1,10 @@
 // Typography
 $base-font-size: 14px !default;
 $bold-font-weight: bold !default;
-$font-family: 'Source Sans Pro', 'PT Serif', Georgia, 'Times New Roman', serif !default;
+$font-family: 'Helvetica Neue', Helvetica, sans-serif !default;
 $line-height: 1.5 !default;
-$heading-font-family: 'Libre Baskerville', 'Helvetica Neue', Helvetica, sans-serif !default;
-$heading-font-weight: 900 !default;
+$heading-font-family: 'Rajdhani', 'Helvetica Neue', Helvetica, sans-serif !default;
+$heading-font-weight: 500 !default;
 $heading-line-height: 1.25 !default;
 $monospace-font-family: 'Source Code Pro', Consolas, monospace !default;
 $h1: 2.5rem !default;
