--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url("/images/transmitters-sky.png");
+  background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url("/images/transmitters-sky.jpg");
   background-size: cover;
   color: white;
   text-shadow: none;
