--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,7 @@ layout: default
 
 <div class="post-header mb2">
   <h1>{{ page.title }}</h1>
-  <span class="post-meta">{{ page.date | date: site.date_format }}</span><br>
-  {% if page.update_date %}
-    <span class="post-meta">Updated: {{ page.update_date | date: site.date_format }}</span><br>
-  {% endif %}
+  <span class="post-meta">{{ page.date | date: site.date_format }}</span><br><span class="post-meta">{{ page.author }}</span><br>
 </div>
 
 <article class="post-content">
