add wisp use case

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -27,15 +27,16 @@ pre {
 }
 
 pre {
-    counter-reset: line-numbering;
-    white-space: pre;
-    overflow-x: auto;
-    word-break: inherit;
-    word-wrap: inherit;
+  counter-reset: line-numbering;
+  white-space: pre;
+  overflow-x: auto;
+  word-break: inherit;
+  word-wrap: inherit;
 }
 
 pre a {
-    background-image: none;
+  background-image: none;
+  text-decoration: none;
 }
 
 pre a::before {
