--- a/_sass/basscss/_base-typography.scss
+++ b/_sass/basscss/_base-typography.scss
@@ -16,7 +16,8 @@ h6 {
   font-weight: $heading-font-weight;
   line-height: $heading-line-height;
   margin-top: 1em;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
+  text-decoration: none;
 }
 
 p,
