--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -8,6 +8,7 @@
   font-size: $h3;
   font-weight: 300;
   background-image: none;
+  text-decoration: none;
 }
 
 .site-header .site-title {
@@ -80,6 +81,6 @@
 
   .site-header .site-nav {
     float: right;
-    margin-top: .25rem;
+    margin-top: 0.25rem;
   }
 }
