--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <a href="https://github.com/althea-mesh">Code</a>
-<a href="{{ site.baseurl }}/how-it-works/">How it works</a>
+<a href="{{ site.baseurl }}/how-it-works">How it works</a>
 <a href="{{ site.baseurl }}/documents/whitepaper.pdf">Whitepaper</a>
 <a href="{{ site.baseurl }}/blog/">Blog</a>
 <a href="https://riot.im/app/#/room/#althea:matrix.org">Chat</a>
