removed pre-defined values in HTML

--- a/_includes/althea-node-locator.html
+++ b/_includes/althea-node-locator.html
@@ -6,20 +6,17 @@
 			<div>
 				<label for="user_email_input">Email Address:</label>
 				<br>
-				<input type="email" id="user_email_input" name="user_email_input" class="form_control" placeholder="required" autocomplete="off"
-				   value="corvo@gmail.com" maxlength="25" required>
+				<input type="email" id="user_email_input" name="user_email_input" class="form_control" placeholder="required" autocomplete="off" maxlength="25" required>
 			</div>
 			<div>
 				<label for="user_fname_input">First Name:</label>
 				<br>
-				<input type="text" id="user_fname_input" name="user_fname_input" class="form_control" placeholder="optional" autocomplete="off"
-				   value="Corvo" maxlength="15" required>
+				<input type="text" id="user_fname_input" name="user_fname_input" class="form_control" placeholder="optional" autocomplete="off" maxlength="15" required>
 			</div>
 			<div>
 				<label for="user_lname_input">Last Name:</label>
 				<br>
-				<input type="text" id="user_lname_input" name="user_lname_input" class="form_control" placeholder="optional" autocomplete="off"
-				   value="Attano" maxlength="15" required>
+				<input type="text" id="user_lname_input" name="user_lname_input" class="form_control" placeholder="optional" autocomplete="off" maxlength="15" required>
 			</div>
 			<div>
 				<label for="user_country_menu">Country:</label>
@@ -279,14 +276,12 @@
 			<div>
 				<label name="user_city_input">City:</label>
 				<br>
-				<input type="text" id="user_city_input" name="user_city_input" class="form_control" autocomplete="off" placeholder="required"
-				   value="Brooklyn" maxlength="20" required/>
+				<input type="text" id="user_city_input" name="user_city_input" class="form_control" autocomplete="off" placeholder="required" maxlength="20" required/>
 			</div>
 			<div>
 				<label name="user_zip_code_input">Zip/Postal Code:</label>
 				<br>
-				<input type="text" id="user_zip_code_input" name="user_zip_code_input" class="form_control" autocomplete="off" placeholder="optional"
-				   value="11249" maxlength="15" />
+				<input type="text" id="user_zip_code_input" name="user_zip_code_input" class="form_control" autocomplete="off" placeholder="optional" maxlength="15" />
 			</div>
 			<div>
 				<div class="g-recaptcha"
