cleaned up code

--- a/_includes/althea-node-locator.html
+++ b/_includes/althea-node-locator.html
@@ -285,7 +285,7 @@
 			</div>
 			<div>
 				<div class="g-recaptcha"
-               data-sitekey="6LeopD8UAAAAAGQ6b98202chGMEYdsXBAoOly_Zk">
+               data-sitekey="ADD STUFF HERE">
             </div>
 			</div>
 			<input type="submit" id="submit" value="Submit" />
