--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -31,6 +31,7 @@ button,
 .button {
   text-shadow: none;
   background-image: none;
+  background: $blue;
   text-decoration: none;
   font-weight: 500;
   font-family: $heading-font-family;
