got map in and redesign hero

--- a/_sass/_emaillist.scss
+++ b/_sass/_emaillist.scss
@@ -1,12 +1,11 @@
-.mc_embed_signup {
-
-}
+// .mc_embed_signup {
+// }
 
 .mc-field-group {
   label {
     display: none;
   }
-  input {
-    float: left;
-  }
+  // input {
+  //   float: left;
+  // }
 }
