--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -32,9 +32,17 @@ button,
   text-shadow: none;
   background-image: none;
   background: $blue;
+  color: black;
   text-decoration: none;
   font-weight: 500;
   font-family: $heading-font-family;
+  // display: flex;
+}
+
+button img,
+.button img {
+  height: 1em;
+  margin-right: 0.5em;
 }
 
 .button:hover,
