--- a/_includes/althea-node-locator.html
+++ b/_includes/althea-node-locator.html
@@ -6,7 +6,7 @@
 			<h1 style="margin-top: 0; margin-bottom: 0">Test Deployments</h1>
 		</div>
 	</div>
-	<div style="width: 100%; display: flex; justify-content: center; position: absolute; bottom: 10px; left: 0px; z-index: 99;">
+	<div style="width: 100%; height: 0; display: flex; align-items: flex-end; justify-content: center; position: absolute; bottom: 10px; left: 0px; z-index: 99;">
 		<div style="background: white; display: flex; padding: 10px">
 			<b style="margin-right: 13px">Legend:</b>
 			<div style="display: flex; margin-right: 15px"><img width="20" height="32" src="/images/active_pointer.png"/><div style="margin-left: 8px">Active deployment</div></div>
