--- a/_includes/althea-node-locator.html
+++ b/_includes/althea-node-locator.html
@@ -9,8 +9,8 @@
 	<div style="width: 100%; height: 0; display: flex; align-items: flex-end; justify-content: center; position: absolute; bottom: 10px; left: 0px; z-index: 99;">
 		<div style="background: white; display: flex; padding: 10px">
 			<b style="margin-right: 13px">Legend:</b>
-			<div style="display: flex; margin-right: 15px"><img width="20" height="32" src="/images/active_pointer.png"/><div style="margin-left: 8px">Active deployment</div></div>
-			<div style="display: flex;"><img width="20" height="32"  src="/images/inactive_pointer.png"/><div style="margin-left: 8px">Requested deployment</div></div>
+			<div style="display: flex; margin-right: 15px"><img width="20" height="32" src="{{'/images/active_pointer.png' | prepend: site.baseurl}}"/><div style="margin-left: 8px">Active deployment</div></div>
+			<div style="display: flex;"><img width="20" height="32"  src="{{'/images/inactive_pointer.png' | prepend: site.baseurl}}"/><div style="margin-left: 8px">Requested deployment</div></div>
 		</div>
 	</div>
 </div>
@@ -314,5 +314,5 @@
 	</div>
 </div>
 
-<script type="text/javascript" src="/scripts/markerclusterer.js"></script>
-<script type="text/javascript" src="/scripts/app.js"></script>
+<script type="text/javascript" src="{{/scripts/markerclusterer.js | prepend: site.baseurl}}"></script>
+<script type="text/javascript" src="{{/scripts/app.js | prepend: site.baseurl}}"></script>
