--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -1,3 +1,7 @@
+// ---
+// # Front matter added to ensure Jekyll processes file.
+// ---
+
 .hero {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("{{'/images/transmitters-sky.jpg' |  prepend: site.baseurl}}");
