--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -1,6 +1,6 @@
-// ---
-// # Front matter added to ensure Jekyll processes file.
-// ---
+---
+# Front matter added to ensure Jekyll processes file.
+---
 
 .hero {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
