--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,10 +17,10 @@
     <meta name="author" content="{{ site.author }}">
     {% if page.categories %}<meta name="keywords" content="{{ page.categories | join: ', ' }}">{% endif %}
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <link rel="alternate" type="application/rss+xml" title="RSS Feed for {{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl }}" />
+    <link rel="alternate" type="application/rss+xml" title="RSS Feed for {{ site.title }}" href="/feed.xml" />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ '/css/pixyll.css' | prepend: site.baseurl }}?{{ site.time | date: "%Y%m%d%H%M" }}" type="text/css">
+    <link rel="stylesheet" href="/css/pixyll.css?{{ site.time | date: "%Y%m%d%H%M" }}" type="text/css">
 
     <!-- Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Rajdhani:500' rel='stylesheet' type='text/css'>
@@ -51,7 +51,7 @@
     <meta name="twitter:description" content="{% if page.summary %}{{ page.summary }}{% else %}{{ site.description }}{% endif %}" />
     <meta name="twitter:url" content="{{ site.url }}{{ page.url }}" />
 
-    <link rel="shortcut icon" href="{{ '/favicon.ico' | prepend: site.baseurl }}" />
+    <link rel="shortcut icon" href="/favicon.ico" />
 
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeDFgQ0YljZCLNcC1QtkgQHqhBcCUIWDE"></script>
