--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,6 +41,7 @@
     <meta property="og:description" content="{% if page.summary %}{{ page.summary | xml_escape }}{% else %}{{ site.description | xml_escape }}{% endif %}">
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title | xml_escape }}">
+    <meta property="og:image" content="{{ site.url }}/images/bird.png" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary" />
