--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -41,7 +41,7 @@ input[type="week"] {
   line-height: 1.75;
   border: 1px solid black;
   background: #fbfbfb;
-  box-shadow: inset 1px 1px #fafafa;
+  box-shadow: inset 1px 1px #cbcbcb;
   margin-bottom: 0;
   border-radius: 4px;
   width: 100%;
