switch to new map and cleanup

--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -37,6 +37,7 @@ button,
   background: #81d1ff;
   color: black;
   text-decoration: none;
+  text-align: center;
   font-weight: 500;
   font-family: $heading-font-family;
   // display: flex;
