--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -1,4 +1,3 @@
-
 .text-center {
   text-align: center;
 }
@@ -11,7 +10,44 @@
   display: block;
 }
 
+@font-face {
+  font-family: "cmu_serif";
+  src: url("/fonts/cmunti-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "cmu_serif";
+  src: url("/fonts/cmunrm-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "cmu_serif";
+  src: url("/fonts/cmunbx-webfont.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "cmu_mono";
+  src: url("/fonts/cmunbtl-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 .paper {
+  font-size: 18px;
+  color: #444;
+  font-family: "cmu_serif", serif;
+  font-weight: 300;
+  margin: 0 auto;
+  max-width: 45rem;
+  line-height: 1.45;
+  padding: 0.25rem;
+
   @media print {
     *,
     *:before,
@@ -74,7 +110,7 @@
 
   pre,
   code {
-    font-family: Menlo, Monaco, "Courier New", monospace;
+    font-family: "cmu_mono", monospace;
   }
 
   pre {
@@ -86,6 +122,8 @@
   a,
   a:visited {
     color: #3498db;
+    border-bottom: none;
+    text-decoration: underline;
   }
 
   a:hover,
@@ -96,26 +134,6 @@
 
   .modest-no-decoration {
     text-decoration: none;
-  }
-
-  html {
-    font-size: 12px;
-  }
-
-  @media screen and (min-width: 32rem) and (max-width: 48rem) {
-    html {
-      font-size: 15px;
-    }
-  }
-
-  @media screen and (min-width: 48rem) {
-    html {
-      font-size: 16px;
-    }
-  }
-
-  body {
-    line-height: 1.85;
   }
 
   p,
@@ -132,35 +150,47 @@
   .modest-h3,
   h4,
   .modest-h4 {
-    margin: 1.414rem 0 0.5rem;
+    margin-top: 1.414rem;
+    margin-bottom: .5rem;
     font-weight: inherit;
     line-height: 1.42;
   }
+  // font-size: 2.827rem;
 
   h1,
   .modest-h1 {
-    margin-top: 0;
-    font-size: 3.998rem;
+    // margin-top: 0;
+    // font-size: 3.998rem;
+    // font-size: 2.827rem;
+    font-size: 1.999rem;
   }
 
   h2,
   .modest-h2 {
-    font-size: 2.827rem;
+    // font-size: 2.827rem;
+    // font-size: 1.999rem;
+    font-size: 1.414rem;
   }
 
   h3,
   .modest-h3 {
-    font-size: 1.999rem;
+    // font-size: 1.999rem;
+    // font-size: 1.414rem;
+    font-size: 1.121rem;
   }
 
   h4,
   .modest-h4 {
-    font-size: 1.414rem;
+    // font-size: 1.414rem;
+    // font-size: 1.121rem;
+    font-size: 1rem;
   }
 
   h5,
   .modest-h5 {
-    font-size: 1.121rem;
+    // font-size: 1.121rem;
+    // font-size: 1rem;
+    font-size: 1rem;
   }
 
   h6,
@@ -182,22 +212,8 @@
   svg,
   select,
   textarea {
-    max-width: 100%;
+    max-width: 70%;
   }
-
-  font-size: 18px;
-  max-width: 100%;
-
-
-
-  color: #444;
-  font-family: "Libre Baskerville", serif;
-  font-weight: 300;
-  margin: 0 auto;
-  max-width: 48rem;
-  line-height: 1.45;
-  padding: 0.25rem;
-
 
   h1,
   h2,
@@ -205,16 +221,8 @@
   h4,
   h5,
   h6 {
-    font-family: "Libre Baskerville", serif;
-  }
-
-  h1,
-  h2,
-  h3 {
-    border-bottom: 2px solid #fafafa;
-    margin-bottom: 1.15rem;
-    padding-bottom: 0.5rem;
-    // text-align: center;
+    font-family: "cmu_serif", serif;
+    font-weight: 700;
   }
 
   blockquote {
@@ -225,6 +233,6 @@
   pre,
   code {
     background-color: #fafaf9;
-    color: #7d4b62
+    color: #7d4b62;
   }
 }
