--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,4 +2,4 @@
 <a href="/how-it-works">How it works</a>
 <a href="/network-paper">Whitepaper</a>
 <a href="https://medium.com/althea-mesh">Blog</a>
-<a href="https://riot.im/app/#/room/#althea:matrix.org">Chat</a>
+<a href="https://discord.gg/6EKgJfT">Chat</a>
